force-app/main/default/objects/Proforma_Invoice__c/fields/Activity_Status__c.field-meta.xml
<CustomField>
    <fullName>Activity_Status__c</fullName>
    <label>Activity Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Payment Created</fullName>
            </value>
            <value>
                <fullName>Order Created</fullName>
            </value>
            <value>
                <fullName>Order Activated</fullName>
            </value>
            <value>
                <fullName>Invoice Created</fullName>
            </value>
            <value>
                <fullName>Invoice Posted</fullName>
            </value>
            <value>
                <fullName>Payment Posted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>