force-app/main/default/objects/Proforma_Invoice__c/fields/Proforma_Invoice_Document__c.field-meta.xml
<CustomField>
    <fullName>Proforma_Invoice_Document__c</fullName>
    <formula>&quot;&amp;solmgr=1&quot; +
&quot;&amp;username=&quot; + $User.Username +
&quot;&amp;id=&quot; + Id +
&quot;&amp;queryid=[QuoteLine]aHkD70000004DsDKAU,[Quote]aHkD70000004DsNKAU&quot; +
&quot;&amp;templateid=aHsD70000008PtMKAU&quot; +
&quot;&amp;fp0=1&quot; +
&quot;&amp;ac1=Proforma Invoice Generated&quot; +
&quot;&amp;sc0=1&quot; +
&quot;&amp;sc1=SalesforceFile&quot; +
&quot;&amp;ofn=Proforma Invoice for &quot; + Renewal_Quote__r.SBQQ__Account__c + &quot; - &quot; + TEXT(TODAY()) +
&quot;&amp;ac0=1&quot; +
&quot;&amp;TemplateGroup=ProformaInvoice&quot; +
&quot;&amp;xdo=CIA&quot; +
&quot;&amp;xdo2=GenerateInvoice&quot; +
&quot;&amp;geo=&quot; + $User.Country +
&quot;&amp;emailtoid=&quot; + Renewal_Quote__r.Invoicing_Contact__r.Id  +
&quot;&amp;congaemailtemplateid=aHjD70000004D4MKAU&quot; +
&quot;&amp;qmode=SendEmail&quot;</formula>
    <label>Proforma Invoice Document</label>
    <type>Text</type>
</CustomField>