force-app/main/default/objects/Proforma_Invoice__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Days_remaining_for_Renewal__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Order_Activated__c</columns>
    <columns>Renewal_Quote__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>